cabal-version:      2.2
name:               design-hs-lib
version:            0.1.0.0
category:           web
extra-source-files:
    README.md

common common-extensions
  default-language: Haskell2010
  default-extensions:
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase
    TypeApplications
    ScopedTypeVariables
    GADTs
    OverloadedStrings

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

-- Dependencies common to both the exe and the lib.
-- This list can be "Extended" using explicit build-depends stanzas in the library or executable.
-- So far, I've omitted most version bounds, they can be generated using `nix-shell --run 'cabal freeze'`
common common-dependencies
  build-depends:
      base-noprelude >=4.7 && <5
    , protolude

    -- servant "core" (& server)
    , blaze-markup
    , blaze-html
    , blaze-svg

    , containers

    -- Characters
    , text
    , bytestring

    -- Control
    , lens

    -- Default instances for configuration etc.
   , data-default-class

   -- Custom type-level errors, for example
   , type-errors

library
  import: common-dependencies, lang-settings, common-extensions
  hs-source-dirs: src
  build-depends:
  exposed-modules:
    -- custom prelude; this can be used by other
    -- packages depending on this module.
    -- However, this might conflict with custom preludes, and may
    -- therefore require mixins, which will be problemmatic.
    Prelude

    Smart.Html.Dsl

    Smart.Html.Shared.Html.Helpers
    Smart.Html.Shared.Types
    Smart.Html.Shared.Html.Icons

    Smart.Html.Accordion
    Smart.Html.Alert
    Smart.Html.AlertDialog
    Smart.Html.AlertStack
    Smart.Html.Button
    Smart.Html.Errors
    Smart.Html.Slate
    Smart.Html.Radio
    Smart.Html.Avatar
    Smart.Html.BorderedList
    Smart.Html.Brand
    Smart.Html.ButtonToolbar
    Smart.Html.GlobalBanner
    Smart.Html.Ruler
    Smart.Html.Card
    Smart.Html.Checkbox
    Smart.Html.Form
    Smart.Html.Textarea
    Smart.Html.Input
    Smart.Html.Loader
    Smart.Html.Misc
    Smart.Html.Navbar
    Smart.Html.Wizard
    Smart.Html.IconList
    Smart.Html.FileUpload
    Smart.Html.Panel
    Smart.Html.StatusPill
    Smart.Html.FileAttachment
    Smart.Html.SideMenu
    Smart.Html.KeyValue
    Smart.Html.Grid

    Smart.Html.Render

    -- Server side modules: used for wiring in actual pages, for example.

    Smart.Server.Page
    Smart.Server.Page.Shared
    Smart.Server.Page.Navbar

